--- a/index.html
+++ b/index.html
@@ -12,18 +12,12 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="./src/index.css">
+    <link rel="stylesheet" type="text/css" href="./src/pages/styles.css">
     <title>AssetHub</title>
   </head>
 
   <body>
-    <div className="texto-login">
-      <h1><img src=".\src\assets\logo.png" alt="Logo" id="logo"> ASSET HUB</h1>
-      <h3>Bem-Vindo</h3>
-    </div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-
-    <p>Versão 1.0.0</p>
   </body>
 </html>
